--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,7 +24,7 @@
     <meta name="keywords" content="movies, series, online streaming, html template, cinema html template">
     <meta name="author" content="GnoDesign">
 
-    <title>CinePass - Movies & Cinema</title>
+    <title>CinepassX - Movies & Cinema</title>
 
     <link rel="shortcut icon" href="{% static 'main/images/favicon.png' %}" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'main/images/apple-touch-icon-iphone.png' %}">
