--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -23,9 +23,9 @@
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="{% url 'home' %}">
 
-<img src="{% static 'main/images/logo.svg' %}" alt="logo" width="150" class="logo">
+<img src="{% static 'main/images/logo.png' %}" alt="logo" width="150" class="logo">
 
-<img src="{% static 'main/images/logo-white.svg' %}" alt="white logo" width="150" class="logo-white">
+<img src="{% static 'main/images/logo-white.png' %}" alt="white logo" width="150" class="logo-white">
 </a>
                     <button id="mobile-nav-toggler" class="hamburger hamburger--collapse" type="button">
                         <span class="hamburger-box">
@@ -232,7 +232,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-7 text-center">
                         <h2 class="title">How it works?</h2>
-                        <h6 class="subtitle">You can relay on our amazing features list and also our customer services will be great experience for you without doubt and in no-time</h6>
+                        <h6 class="subtitle">A monthly subscription which covers your desire to watch movies without burning a hole in your wallet!</h6>
                     </div>
                 </div>
 
@@ -284,7 +284,7 @@
 <i class="icon-emotsmile"></i>
 </div>
 <div>
-<h5 class="title">Enjoy CinePassX</h5>
+<h5 class="title">Enjoy CinepassX</h5>
 <h6 class="subtitle">Enjoy unlimited Movies in your nearest cinema hall.</h6>
 </div>
 </a>
@@ -359,11 +359,90 @@
             </div>
         </section> -->
 
+<section class="become-premium3 ptb100">
+            <div class="container">
+
+                <div class="row justify-content-center">
+                    <div class="col-md-7 text-center">
+                        <h2 class="title">Become a Premium Member</h2>
+                        <h6 class="subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h6>
+                    </div>
+                </div>
+
+
+                <div class="row mt80">
+                    <div class="col-md-12">
+
+                        <div class="pricing-table-2">
+
+                            <div class="plan">
+
+                                <div class="plan-price">
+                                    <h3>Basic</h3>
+                                    <span class="value">Rs. 200</span>
+                                    <span class="period">Try cinepassX for FREE for the first 7 days, you can upgrade anytime.</span>
+                                </div>
+
+                                <div class="plan-features">
+                                    <ul>
+                                        <li>7 days</li>
+                                        <li>720p Resolution</li>
+                                        <li>Desktop Only</li>
+                                        <li>Limited Support</li>
+                                    </ul>
+                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Subscribe</a>
+                                </div>
+                            </div>
+
+                            <div class="plan featured">
+
+                                <div class="plan-price">
+                                    <h3>Premium</h3>
+                                    <span class="value">Rs. 399</span>
+                                    <span class="period">Most wanted subscription package by our users.</span>
+                                </div>
+
+                                <div class="plan-features">
+                                    <ul>
+                                        <li>1 Month</li>
+                                        <li>Unlimited Movies</li>
+                                        <li>Lifetime Availability</li>
+                                        <li>Cinemas Near You</li>
+                                        <li>24/7 Support</li>
+                                    </ul>
+                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Subscribe</a>
+                                </div>
+                            </div>
+
+                            <div class="plan">
+
+                                <div class="plan-price">
+                                    <h3>Cinematic</h3>
+                                    <span class="value">Rs. 899</span>
+                                    <span class="period">Watch your favorite movies anywhere and anytime.</span>
+                                </div>
+
+                                <div class="plan-features">
+                                    <ul>
+                                        <li>2 Months</li>
+                                        <li>Ultra HD</li>
+                                        <li>Any Device</li>
+                                        <li>24/7 Support</li>
+                                    </ul>
+                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Subscribe</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
 
 
-
-        <section class="upcoming-movies parallax ptb100" data-background="{% static 'main/images/posters/movie-collection.jpg' %}" data-color="#3e4555" data-color-opacity="0.95">
+        <!-- <section class="upcoming-movies parallax ptb100" data-background="{% static 'main/images/posters/movie-collection.jpg' %}" data-color="#3e4555" data-color-opacity="0.95">
             <div class="container">
 
                 <div class="row justify-content-center">
@@ -455,89 +534,10 @@
                             </div>
 
                         </div>
-        </section>
+        </section> -->
 
 
-        <section class="become-premium3 ptb100">
-            <div class="container">
-
-                <div class="row justify-content-center">
-                    <div class="col-md-7 text-center">
-                        <h2 class="title">Become a Premium Member</h2>
-                        <h6 class="subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h6>
-                    </div>
-                </div>
-
-
-                <div class="row mt80">
-                    <div class="col-md-12">
-
-                        <div class="pricing-table-2">
-
-                            <div class="plan">
-
-                                <div class="plan-price">
-                                    <h3>Basic</h3>
-                                    <span class="value">Free</span>
-                                    <span class="period">Try movify for FREE for the first 7 days, you can upgrade anytime.</span>
-                                </div>
-
-                                <div class="plan-features">
-                                    <ul>
-                                        <li>7 days</li>
-                                        <li>720p Resolution</li>
-                                        <li>Desktop Only</li>
-                                        <li>Limited Support</li>
-                                    </ul>
-                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Get Started</a>
-                                </div>
-                            </div>
-
-                            <div class="plan featured">
-
-                                <div class="plan-price">
-                                    <h3>Premium</h3>
-                                    <span class="value">Rs. 399</span>
-                                    <span class="period">Most wanted subscription package by our users.</span>
-                                </div>
-
-                                <div class="plan-features">
-                                    <ul>
-                                        <li>1 Month</li>
-                                        <li>Unlimited Movies</li>
-                                        <li>Lifetime Availability</li>
-                                        <li>Cinemas Near You</li>
-                                        <li>24/7 Support</li>
-                                    </ul>
-                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Get Started</a>
-                                </div>
-                            </div>
-
-                            <div class="plan">
-
-                                <div class="plan-price">
-                                    <h3>Cinematic</h3>
-                                    <span class="value">$39</span>
-                                    <span class="period">Watch your favorite movies anywhere and anytime.</span>
-                                </div>
-
-                                <div class="plan-features">
-                                    <ul>
-                                        <li>2 Months</li>
-                                        <li>Ultra HD</li>
-                                        <li>Any Device</li>
-                                        <li>24/7 Support</li>
-                                    </ul>
-                                    <a class="btn btn-main btn-effect mt30" href="/payment/">Get Started</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </section>
+        
 
 
         <!-- <section class="blog bg-light ptb100">
@@ -676,9 +676,9 @@
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="widget widget-about">
 
-                                <img src="{% static 'main/images/logo.svg' %}" alt="logo" class="logo">
+                                <img src="{% static 'main/images/logo.png' %}" alt="logo" class="logo">
 
-                                <img src="{% static 'main/images/logo-white.svg' %}" alt="white logo" class="logo-white">
+                                <img src="{% static 'main/images/logo-white.png' %}" alt="white logo" class="logo-white">
                                 <p class="nomargin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque. Praesentium suscipit provident explicabo dignissimos nostrum numquam deserunt earum accusantium et fugit.</p>
                             </div>
                         </div>
