--- a/main/templates/main/404.html
+++ b/main/templates/main/404.html
@@ -23,9 +23,9 @@
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="{% url 'home' %}">
 
-<img src="{% static 'main/images/logo.svg' %}" alt="logo" width="150" class="logo">
+<img src="{% static 'main/images/logo.png' %}" alt="logo" width="150" class="logo">
 
-<img src="{% static 'main/images/logo-white.svg' %}" alt="white logo" width="150" class="logo-white">
+<img src="{% static 'main/images/logo-white.png' %}" alt="white logo" width="150" class="logo-white">
 </a>
                     <button id="mobile-nav-toggler" class="hamburger hamburger--collapse" type="button">
                         <span class="hamburger-box">
@@ -124,9 +124,9 @@
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="widget widget-about">
 
-                                <img src="assets/images/logo.svg" alt="logo" class="logo">
+                                <img src="assets/images/logo.png" alt="logo" class="logo">
 
-                                <img src="assets/images/logo-white.svg" alt="white logo" class="logo-white">
+                                <img src="assets/images/logo-white.png" alt="white logo" class="logo-white">
                                 <p class="nomargin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque. Praesentium suscipit provident explicabo dignissimos nostrum numquam deserunt earum accusantium et fugit.</p>
                             </div>
                         </div>
