--- a/main/templates/main/logout.html
+++ b/main/templates/main/logout.html
@@ -15,7 +15,7 @@
         <main class="coming-soon" style="background-image: url({% static 'main/images/posters/movie-collection.jpg' %})">
             <div class="container">
 
-                <img src="{% static 'main/images/logo-white.svg' %}" width="200" alt="logo">
+                <img src="{% static 'main/images/logo-white.png' %}" width="200" alt="logo">
                 <h3>You have been Logged Out</h3>
 
                 <!-- <div id="countdown" class="count-down"></div> -->
