--- a/main/templates/main/payment_form.html
+++ b/main/templates/main/payment_form.html
@@ -1,7 +1,99 @@
 {% extends "main/base.html" %}
+{% load static %}
 {% block content %}
-    <div class="content-section">
-    <h3>Please proceed to the payment portal</h3>
+ <div class="loading">
+        <div class="loading-inner">
+            <div class="loading-effect">
+                <div class="object"></div>
+            </div>
+        </div>
+    </div>
+
+
+    <nav id="main-mobile-nav"></nav>
+
+
+    <div class="wrapper">
+
+
+        <header class="header header-fixed header-transparent text-white">
+            <div class="container-fluid">
+
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand" href="{% url 'home' %}">
+
+<img src="{% static 'main/images/logo.png' %}" alt="logo" width="150" class="logo">
+
+<img src="{% static 'main/images/logo-white.png' %}" alt="white logo" width="150" class="logo-white">
+</a>
+                    <button id="mobile-nav-toggler" class="hamburger hamburger--collapse" type="button">
+                        <span class="hamburger-box">
+<span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+
+                    <div class="navbar-collapse" id="main-nav">
+
+                        <ul class="navbar-nav mx-auto" id="main-menu">
+
+                             <li class="nav-item"> 
+                                <a class="nav-link" href="{% url 'home' %}" aria-haspopup="true" aria-expanded="false">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
+                            </li>
+                        </ul>
+
+
+                        <ul class="navbar-nav extra-nav">
+
+{% if user.is_authenticated %}
+<li class="nav-item dropdown">
+                                <a class="dropdown-toggle btn btn-main btn-effect login-btn popup-with-zoom-anim" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon-user"></i>{{user.username}}</a>
+
+                                <ul class="dropdown-menu">
+
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                                    </li>
+
+</ul>   </li>
+{% else %}
+                            <li class="nav-item m-auto">
+                                <a href="#login-register-popup" class="btn btn-main btn-effect login-btn popup-with-zoom-anim">
+<i class="icon-user"></i>login
+</a>
+                            </li>
+{% endif %}
+                        </ul>
+
+                    </div>
+
+                </nav>
+
+            </div>
+        </header>
+
+
+        <section class="page-header overlay-gradient" style="background: url({% static 'main/images/posters/movie-collection.jpg' %});">
+            <div class="container">
+                <div class="inner">
+                    <h2 class="title">Payment</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li>Payment</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
+
+        <main class="contact-page ptb100">
+            <div class="container">
+                <div class="row">
+                        <div class="col-md-8 col-sm-12">
+                              <h3>Please proceed to the payment portal</h3>
     {% if error %}
       <span style="color:red">Please fill all mandatory fields.</span>
     {% endif %}
@@ -22,22 +114,22 @@
     
 
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             Amount : {{amount}}
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             Purpose : {{productinfo}}
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             Name : {{first_name}}
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             Email : {{email}}
         </div>
     </div>            
@@ -47,21 +139,315 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             Transaction ID : {{txnid}}
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-12 col-sm-12" style="padding-bottom:20px;padding-top:20px;">
+        <div class=" col-md-12 col-sm-12" style="padding-bottom:20px;padding-top:20px;">
             After clicking 'Pay Now' button, you will be redirected to PayUMoney Secure Gateway.
         </div>
     </div>
     
     <div class="form-group">
-        <div class="col-md-12 col-sm-12">
+        <div class=" col-md-12 col-sm-12">
             <input type="submit" class="btn btn-success btn-sm" value="Pay Now">
         </div>
     </div>
 </form>
+
+            </div>    
+             
+
+
+
+
+
+<!--                         <form id="contact-form">
+
+                            <div id="contact-result"></div>
+
+
+                            <div class="form-group">
+                                <input class="form-control input-box" type="text" name="name" placeholder="Your Name" autocomplete="off">
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control input-box" type="email" name="email" placeholder="your-email@movify.com" autocomplete="off">
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control input-box" type="text" name="subject" placeholder="Subject" autocomplete="off">
+                            </div>
+
+                            <div class="form-group mb20">
+                                <textarea class="form-control textarea-box" rows="8" name="message" placeholder="Type your message..."></textarea>
+                            </div>
+
+                            <div class="form-group text-center">
+                                <button class="btn btn-main btn-effect" type="submit">Send message</button>
+                            </div>
+                        </form> -->
+
+                    </div>
+
+                </div>
+            </div>
+        </main>
+
+
+        <footer class="footer1 bg-dark">
+
+            <div class="footer-widget-area ptb100">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="widget widget-about">
+
+                                <img src="{% static 'main/images/logo.png' %}" alt="logo" class="logo">
+
+                                <img src="{% static 'main/images/logo-white.png' %}" alt="white logo" class="logo-white">
+                                <p class="nomargin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque. Praesentium suscipit provident explicabo dignissimos nostrum numquam deserunt earum accusantium et fugit.</p>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="widget widget-links">
+                                <h4 class="widget-title">Useful links</h4>
+                                <ul class="general-listing">
+                                    <li><a href="#">about movify</a></li>
+                                    <li><a href="#">blog</a></li>
+                                    <li><a href="#">forum</a></li>
+                                    <li><a href="#">my account</a></li>
+                                    <li><a href="#">watch list</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="widget widget-blog">
+                                <h4 class="widget-title">latest news</h4>
+                                <ul class="blog-posts">
+                                    <li><a href="#">blog post 1</a><small>januar 13, 2018</small></li>
+                                    <li><a href="#">blog post 2</a><small>januar 13, 2018</small></li>
+                                    <li><a href="#">blog post 3</a><small>januar 13, 2018</small></li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="widget widget-social">
+                                <h4 class="widget-title">follow us</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque.</p>
+
+                                <ul class="social-btns">
+
+                                    <li>
+                                        <a href="#" class="social-btn-roll facebook">
+<div class="social-btn-roll-icons">
+<i class="social-btn-roll-icon fa fa-facebook"></i>
+<i class="social-btn-roll-icon fa fa-facebook"></i>
 </div>
+</a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#" class="social-btn-roll twitter">
+<div class="social-btn-roll-icons">
+<i class="social-btn-roll-icon fa fa-twitter"></i>
+<i class="social-btn-roll-icon fa fa-twitter"></i>
+</div>
+</a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#" class="social-btn-roll google-plus">
+<div class="social-btn-roll-icons">
+<i class="social-btn-roll-icon fa fa-google-plus"></i>
+<i class="social-btn-roll-icon fa fa-google-plus"></i>
+</div>
+</a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#" class="social-btn-roll instagram">
+<div class="social-btn-roll-icons">
+<i class="social-btn-roll-icon fa fa-instagram"></i>
+<i class="social-btn-roll-icon fa fa-instagram"></i>
+</div>
+</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="footer-copyright-area ptb30">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="d-flex">
+                                <div class="links">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item"><a href="#">Privacy & Cookies</a></li>
+                                        <li class="list-inline-item"><a href="#">Terms & Conditions</a></li>
+                                        <li class="list-inline-item"><a href="#">Legal Disclaimer</a></li>
+                                        <li class="list-inline-item"><a href="#">Community</a></li>
+                                    </ul>
+                                </div>
+                                <div class="copyright ml-auto">All Rights Reserved by <a href="#">Movify</a>.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+
+    </div>
+
+
+    <div class="general-search-wrapper">
+        <form class="general-search" role="search" method="get" action="#">
+            <input type="text" placeholder="Type and hit enter...">
+            <span id="general-search-close" class="ti-close toggle-search"></span>
+        </form>
+    </div>
+
+
+    <div id="login-register-popup" class="small-dialog zoom-anim-dialog mfp-hide">
+
+        <div class="signin-wrapper">
+            <div class="small-dialog-headline">
+                <h4 class="text-center">Sign in</h4>
+            </div>
+            <div class="small-dialog-content">
+
+                <form id="cariera_login" method="post" action="/login/">
+                    <p class="status"></p>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Your Username" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Your Password" />
+                    </div>
+<!--                     <div class="form-group">
+                        <div class="checkbox pad-bottom-10">
+                            <input id="check1" type="checkbox" name="remember" value="yes">
+                            <label for="check1">Keep me signed in</label>
+                        </div>
+                    </div> -->
+                    <div class="form-group">
+                        <input type="submit" value="Sign in" class="btn btn-main btn-effect nomargin" />
+                    </div>
+                </form>
+
+                <div class="bottom-links">
+                    <span>
+Not a member?
+<a class="signUpClick">Sign up</a>
+</span>
+                    <a class="forgetPasswordClick pull-right">Forgot Password</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="signup-wrapper">
+            <div class="small-dialog-headline">
+                <h4 class="text-center">Sign Up</h4>
+            </div>
+            <div class="small-dialog-content">
+
+                <form id="cariera_registration" action="/register/" method="POST">
+                    {% csrf_token %}
+                    <p class="status"></p>
+                    <div class="form-group">
+                        <label for="first_name">First Name</label>
+                        <input name="first_name" id="movify_user_login" class="form-control" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label for="last_name">Last Name</label>
+                        <input name="last_name" id="movify_user_login" class="form-control" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input name="username" id="movify_user_login" class="form-control" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <input name="phone" id="movify_user_login" class="form-control" type="tel" />
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input name="email" id="movify_user_email" class="form-control" type="email" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password1">Password</label>
+                        <input name="password1" id="movify_password" class="form-control" type="password" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password2">Re-Enter Password</label>
+                        <input name="password2" id="movify_password" class="form-control" type="password" />
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-main btn-effect nomargin" value="Register" />
+                    </div>
+                </form>
+
+                <div class="bottom-links">
+                    <span>
+Already have an account?
+<a class="signInClick">Sign in</a>
+</span>
+                    
+                </div>
+            </div>
+        </div>
+
+
+        <div class="forgetpassword-wrapper">
+            <div class="small-dialog-headline">
+                <h4 class="text-center">Forgotten Password</h4>
+            </div>
+            <div class="small-dialog-content">
+
+                <form id="forget_pass_form" action="/forgot-password/" method="post">
+                    <p class="status"></p>
+                    <div class="form-group">
+                        <label for="email">Email Address *</label>
+                        <input type="email" name="email" class="form-control" id="email3" placeholder="Email Address" />
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" name="submit" value="Get New Password" class="btn btn-main btn-effect nomargin" />
+                    </div>
+                </form>
+
+                <div class="bottom-links">
+                    <a class="cancelClick">Cancel</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div id="backtotop">
+        <a href="#"></a>
+    </div>
+
+   
+    
 {% endblock content %}
