--- a/main/templates/main/contact-us.html
+++ b/main/templates/main/contact-us.html
@@ -117,7 +117,7 @@
                                 <li>
                                     <i class="icon-paper-plane"></i>
                                     <strong>E-Mail:</strong>
-                                    <span><a href="#"><span class="__cf_email__" data-cfemail="d9b0b7bfb699b4b6afb0bfa0f7bab6b4">[email&#160;protected]</span></a></span>
+                                    <span><a href="#"><span class="__cf_email__">support@cinepassx.com</span></a></span>
                                 </li>
                             </ul>
                         </div>
