--- a/main/templates/main/payment_form.html
+++ b/main/templates/main/payment_form.html
@@ -155,7 +155,20 @@
         </div>
     </div>
 </form>
+z<ul>
 
+<li>The service is valid only at PVR:Shalimar Bagh.</li>
+<li>The user is entitled to watch one movie title once and a maximum of one movie a day.</li>
+<li>This service is Non-transferable and is to be used by the payed user only.</li>
+<li>A Nominal Redemption fee will be levied offline for our basic plan.</li>
+<li>Additional charges will be applicable for glasses for 3D movies.</li>
+<li>In case of any dispute the decision by cinepassx Pvt Ltd will be final and binding.</li>
+<li>All prices are subject to change without prior notice.</li>
+<li>User is entitled to use one mobile number per card.</li>
+<li>cinepassx solely reserves the right to change/modify or stop the service without any prior notice.</li>
+<li>A nominal 50% fees of the ticket will be charged if the user is half n hour late in collecting ticket from near PVR Shalimar Bagh.</li>
+
+<ul>
             </div>    
              
 
