--- a/main/templates/main/book_failure.html
+++ b/main/templates/main/book_failure.html
@@ -19,7 +19,7 @@
                 <div style="display:none">
     <input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
 </div>
-                <h3>Transaction Failed</h3>
+                <h3>Oops! Looks like something went wrong.</h3>
      <div>
       <a href="{% url 'home' %}" class="text-white">Back to Home</a>
     </div>
